Fix jumping caused by relative title width. Add a line to the taglines. Put Rose and Blue and Gray on the README, the beginnings of a style guide.

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -61,7 +61,7 @@ nav {
   width: 100%;
 }
 .title {
-  width: 60%;
+  width: 660px;
   height: 200px;
 }
 .name {
